# playground

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  SECURITY.md  development-requirements.txt  go.mod  go.sum  main_test.go  package.Dockerfile  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/: dependabot.yml  renovate.json
.github/linters/: .golangci.yaml  README.md  bearer.yml
.github/workflows/: bandit.yaml  black.yaml  check-development-dependencies.yaml  dependency-scan.yaml  docker-build-container.yaml  docker-push-containers-to-dockerhub-manual.yaml  docker-push-containers-to-dockerhub.yaml  flake8.yaml  go-test-darwin.yaml  go-test-linux.yaml  go-test-windows.yaml  isort.yaml  mypy.yaml  pylint.yaml
cmd/: cmd_test.go  completion.go  docs.go  github.go  root.go
docs/: development.md  examples.md
httpserver/: httpserver_basic.go  httpserver_examples_test.go  httpserver_test.go
httpserver/static/templates/site/: home.html
httpserver/static/templates/site/go/: jupyter-lab.html  local-development.html  migrate.html  playground.html
httpserver/static/templates/site/python/: jupyter-lab.html  local-development.html  migrate.html  playground.html
makefiles/: darwin.mk  linux.mk  windows.mk
rootfs/examples/go/: go.mod  go.sum
rootfs/examples/go/senzing_load_truthsets/: main.go
rootfs/examples/go/senzing_load_user_data/: main.go
rootfs/examples/notebooks/go/: senzing_hello_world.ipynb  senzing_list_datasources.ipynb  senzing_load_truthsets.ipynb  senzing_load_user_data.ipynb  tutorial.ipynb
rootfs/examples/notebooks/python/: senzing_hello_world.ipynb  senzing_list_datasources.ipynb  senzing_load_truthsets.ipynb  senzing_load_user_data.ipynb  senzing_show_method_help.ipynb
rootfs/examples/python/: senzing_hello_world.py  senzing_load_truthsets.py  senzing_load_user_data.py  senzing_method_help.py
