[project]
name = "playground"
version = "0.4.16"
description = "A playground for trying Senzing"
authors = [{ name = "senzing", email = "support@senzing.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "autopep8==2.3.2",
  "grpcio==1.76.0",
  "jupyter==1.1.1",
  "jupyterlab-code-formatter==3.0.2",
  "nbconvert==7.16.6",
  "notebook==7.5.1",
  "protobuf==6.33.2",
  "pyspark==4.1.0",
  "senzing-grpc==0.5.13",
]
license = "Apache-2.0"
license-files = [
  "LICENSE",
  ".github/senzing-corporate-contributor-license-agreement.pdf",
  ".github/senzing-individual-contributor-license-agreement.pdf",
]

[project.urls]
bugtracker = "https://github.com/senzing-garage/playground/issues"
changelog = "https://github.com/senzing-garage/playground/blob/main/CHANGELOG.md"
source = "https://github.com/senzing-garage/playground"

[project.entry-points."console.scripts"]
template_python = "template_python.main_entry:main"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
all = [
  { include-group = "development" },
  { include-group = "documentation" },
  { include-group = "lint" },
  { include-group = "test" },
]
development = [
  "build==1.3.0",
  "cryptography==46.0.3",
  "fpvs==0.3.0",
  "psutil==7.2.1",
  "pytest-cov==7.0.0",
  "pytest-schema==0.1.2",
  "setuptools==80.9.0",
  "twine==6.2.0",
  "virtualenv==20.36.1",
  "wheel==0.45.1",
]
documentation = [
  "autodocsumm",
  "myst_parser",
  "sphinx-autodoc-typehints",
  "sphinx-gallery",
  "sphinx-jinja2-compat",
  "sphinx-prompt",
  "sphinx-rtd-theme",
  "sphinx-tabs",
  "sphinx-toolbox",
  "sphinx",
  "sphinxcontrib-applehelp",
  "sphinxcontrib-devhelp",
  "sphinxcontrib-htmlhelp",
  "sphinxcontrib-jquery",
  "sphinxcontrib-jsmath",
  "sphinxcontrib-qthelp",
  "sphinxcontrib-serializinghtml",
  "sphinxext-remoteliteralinclude",
]
lint = [
  "bandit==1.8.6; python_version <= '3.11'",
  "bandit==1.9.2; python_version > '3.11'",
  "black==25.11.0; python_version <= '3.11'",
  "black==25.12.0; python_version > '3.11'",
  "flake8==7.3.0",
  "isort==6.1.0; python_version <= '3.11'",
  "isort==7.0.0; python_version > '3.11'",
  "mypy==1.19.1",
  "pylint-per-file-ignores==2.0.3; python_version <= '3.11'",
  "pylint-per-file-ignores==3.2.0; python_version > '3.11'",
  "pylint==3.3.9; python_version <= '3.11'",
  "pylint==4.0.4; python_version > '3.11'",
]
test = [
  "pytest==8.4.2; python_version <= '3.11'",
  "pytest==9.0.2; python_version > '3.11'",
  "coverage==7.10.7; python_version <= '3.11'",
  "coverage==7.13.1; python_version > '3.11'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"
src_paths = ["rootfs/examples"]

[tool.mypy]
disable_error_code = ["import-not-found", "import-untyped"]

[tool.pylint]
ignored-argument-names = "args|kwargs"
disable = [
  "duplicate-code",
  "import-error",
  "invalid-name",
  "line-too-long",
  "missing-function-docstring",
  "missing-module-docstring",
  "unspecified-encoding",
]

good-names = ["playground"]
ignore = ["__init__.py", "docs/source/conf.py"]
notes = ["FIXME"]
